force-app/main/default/objects/Invoice_Recipient__c/Invoice_Recipient__c.object-meta.xml
<CustomObject>
    <description>Used to store the details of the email that is being sent to Finance Contact</description>
    <label>Invoice Recipient</label>
    <nameField>
        <displayFormat>IR-{0000}</displayFormat>
        <label>Invoice Email Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>