force-app/main/default/objects/Invoice_Recipient__c/fields/Email_sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_sent_Date__c</fullName>
    <label>Email sent Date</label>
    <type>DateTime</type>
</CustomField>