force-app/main/default/objects/Invoice_Recipient__c/fields/Finance_Contact__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Invoice_Receipients</relationshipName>
    <type>Lookup</type>
</CustomField>