force-app/main/default/objects/Invoice_Recipient__c/fields/Invoice_and_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_and_Contact_Id__c</fullName>
    <label>Invoice and Contact Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>