force-app/main/default/objects/Invoice_Recipient__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>